--- a/8-bit-map/src/styles/global.css
+++ b/8-bit-map/src/styles/global.css
@@ -2,3 +2,8 @@
     font-family: 'ArcadeClassic';
     src: url('/fonts/ArcadeClassic.ttf') format('truetype');
 }
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
